# plottypus

./: .pre-commit-config.yaml  Justfile  LICENSE  README.md  pyproject.toml
examples/co2_emissions/: annual-co2-emissions.csv  readme.md
src/plottypus/: __init__.py  backends.py  cli.py  core.py  data.py  plotting.py
src/plotypus/: backends.py  cli.py  core.py  data.py  plotting.py
